--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "concurrently \"npm run dev\" \"npm run db\"",
     "dev": "vite",
     "db": "json-server --watch db.json --port 3001",
     "build": "vite build",
@@ -23,6 +24,7 @@
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^5.1.1",
+    "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
