--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
     "sweetalert2": "^11.26.3",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "yet-another-react-lightbox": "^3.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
