--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,33 @@
         ],
         "headers": [
             {
+                "source": "**/*.@(js|css|html|png|jpg|jpeg|gif|svg|webp|ico|json)",
+                "headers": [
+                    {
+                        "key": "Cache-Control",
+                        "value": "public, max-age=31536000, immutable"
+                    }
+                ]
+            },
+            {
+                "source": "**/*.@(html)",
+                "headers": [
+                    {
+                        "key": "Cache-Control",
+                        "value": "no-cache"
+                    }
+                ]
+            },
+            {
+                "source": "/service-worker.js",
+                "headers": [
+                    {
+                        "key": "Cache-Control",
+                        "value": "no-cache"
+                    }
+                ]
+            },
+            {
                 "source": "/**",
                 "headers": [
                     {
